<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 무엇을, 언제 보여줄지 -->
    <PreferenceCategory
        android:title="@string/cat_display"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="true"
            android:key="island_enabled"
            android:summary="@string/pref_island_desc"
            android:title="@string/pref_island"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <ListPreference
            android:defaultValue="3"
            android:dependency="island_enabled"
            android:entries="@array/island_seconds_entries"
            android:entryValues="@array/island_seconds_values"
            android:key="island_seconds"
            android:title="@string/pref_island_seconds"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="notif_wear"
            android:summary="@string/notif_wear_desc"
            android:title="@string/notif_wear"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notif_wear"
            android:key="wear_sound"
            android:summary="@string/pref_wear_sound_desc"
            android:title="@string/pref_wear_sound"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notif_wear"
            android:key="wear_vibrate"
            android:summary="@string/pref_wear_vibrate_desc"
            android:title="@string/pref_wear_vibrate"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="auto_on_connect"
            android:summary="@string/pref_auto_connect_desc"
            android:title="@string/pref_auto_connect"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <!-- 얼마나 자주 돌지 -->
    <PreferenceCategory
        android:title="@string/battery_category"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="true"
            android:key="on_demand"
            android:summary="@string/pref_on_demand_desc"
            android:title="@string/pref_on_demand"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="notif_persistent"
            android:summary="@string/notif_persistent_desc"
            android:title="@string/notif_persistent"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="scan_saver"
            android:summary="@string/pref_scan_saver_desc"
            android:title="@string/pref_scan_saver"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <Preference
            android:key="battery_refresh"
            android:title="@string/pref_battery_refresh"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="fast_scan"
            android:summary="@string/pref_fast_scan_desc"
            android:title="@string/pref_fast_scan"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <!-- 배터리 값을 어디서 받을지 -->
    <PreferenceCategory
        android:title="@string/cat_advanced"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="true"
            android:key="aacp_enabled"
            android:summary="@string/pref_aacp_desc"
            android:title="@string/pref_aacp"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="aacp_enabled"
            android:key="aacp_battery"
            android:summary="@string/pref_aacp_battery_desc"
            android:title="@string/pref_aacp_battery"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/general_category"
        app:iconSpaceReserved="false">

        <Preference
            android:key="restartService"
            android:summary="@string/restart_desc"
            android:title="@string/restart"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about"
        app:iconSpaceReserved="false">

        <Preference
            android:key="about"
            android:summary="@string/app_name"
            android:title="@string/about"
            app:iconSpaceReserved="false">
            <intent
                android:targetClass="com.dosse.airpods.ui.AboutActivity"
                android:targetPackage="com.dosse.airpods" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
